@@ -58,6 +58,11 @@
 
       \item \command{make install-strip} failed under some configuration
       options.
+
+      \item Packages can customize non-standard installation of
+      libraries via \code{install.libs.R} script. This allows packages
+      that have architecture-specific binaries beyond the package shared
+      library to be installed in a multi-architecture setting.
     }
   }
   
